code25_all/scala/13109643.txt
trait Foo[A]
class Bar[A](set: Set[Foo[A]] = Set.empty)

<console>:8: error: polymorphic expression cannot be instantiated to expected type;
 found   : [A]scala.collection.immutable.Set[A]
 required: Set[Foo[?]]
       class Bar[A](set: Set[Foo[A]] = Set.empty)
                                           ^

Set.empty
class Bar[A](set: Set[Foo[A]] = { Set.empty: Set[Foo[A]] })

Set
case class Hallo[A]()
class Bar[A](hallo: Hallo[A] = Hallo.apply)  // nope

class Bar[A](hallo: Hallo[A] = Hallo.apply[A])

class Bar[A](hallo: Hallo[A] = Hallo())      // ???

